tmp/atn1029.c.err
./adminaccess/codes/atn1029.c: In function ‘main’:
./adminaccess/codes/atn1029.c:3:10: error: expected expression before ‘}’ token
 {while(1)}
          ^
